force-app/main/default/objects/ExpApp_Expense__c/fields/ExpApp_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>ExpApp_Expense_Amount__c</fullName>
    <description>Describe the amount that was spent for the item.</description>
    <inlineHelpText>Enter the amount that you spent on the item.</inlineHelpText>
    <label>Expense Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>