force-app/main/default/objects/ExpApp_Expense__c/fields/ExpApp_Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Describes the date for when the expense was made.</description>
    <inlineHelpText>Enter the date when you made the expense.</inlineHelpText>
    <label>Expense Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>