force-app/main/default/objects/ExpApp_Expense__c/fields/ExpApp_Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>ExpApp_Expense_Item__c</fullName>
    <label>Expense Item</label>
    <referenceTo>Expense_Item__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>