force-app/main/default/objects/ExpApp_Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExpApp_Expense_Item__c</columns>
    <columns>ExpApp_Expense_Date__c</columns>
    <columns>ExpApp_Expense_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>